--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/storage": "^5.15.0",
     "axios": "^1.2.6",
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
